--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -6462,16 +6462,16 @@
                     } else if (response.status === 429) {
                         const data = await response.json();
                         const waitText = (data.detail && data.detail.wait_text) ? data.detail.wait_text : 'некоторое время';
-                        alert(`Слишком много запросов. Пожалуйста, подождите ${waitText} перед следующей отправкой.`);
-                        modal.style.display = originalModalDisplay;
+                        showFadingMessage(`Слишком много запросов. Пожалуйста, подождите ${waitText} перед следующей отправкой.`);
+                        closeAdminCommentModal();
                     } else if (response.status === 402) {
                         const data = await response.json();
                         const msg = (data.detail && typeof data.detail === 'string') ? data.detail : 'Недостаточно баланса для отправки комментария. Активируйте промокод или приобретите услугу.';
-                        alert(msg);
-                        modal.style.display = originalModalDisplay;
+                        showFadingMessage(msg);
+                        closeAdminCommentModal();
                     } else {
-                        alert('Ошибка при отправке сообщения');
-                        modal.style.display = originalModalDisplay;
+                        showFadingMessage('Ошибка при отправке сообщения');
+                        closeAdminCommentModal();
                     }
                 }).catch(error => {
                     clearTimeout(timeoutId);
