--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -3165,7 +3165,7 @@
                 const maxScore = Math.max(lowerScore, upperScore);
                 const minScore = Math.min(lowerScore, upperScore);
                 
-                gameTypeLabel.textContent = `Матч до ${matchLength} Счет ${maxScore}-${minScore}`;
+                gameTypeLabel.textContent = `Матч до ${matchLength}. Счет ${maxScore}-${minScore}`;
             } else {
                 gameTypeLabel.textContent = 'Манигейм';
             }
