--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -2263,8 +2263,8 @@
             bottom: 0;
             background: rgba(0, 0, 0, 0.5);
             z-index: 10000;
-            justify-content: flex-start;
-            align-items: flex-start;
+            justify-content: center;
+            align-items: center;
             padding: 20px;
         }
         .msg-modal-overlay.show {
